Fixed padding and sign size on mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,14 +2,11 @@ body {
 	font-family: "Lato";
 	font-weight: 300;
     font-size: 16px;
+    padding: 4em 0;
 }
 
 img {
 	max-width: 100%;
-}
-
-.container {
-	padding-top: 4em;
 }
 
 .address {
